Other fixes done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -980,6 +980,9 @@ img {
 /* ########## Business Details Screen End ########## */
 
 /* ########## Claim Business Modal ########## */
+.modal {
+  z-index: 9999;
+}
 .modal-content {
   padding: 60px 20px 30px;
 }
@@ -2393,7 +2396,7 @@ input[type="file"] {
 .nav-header {
   position: relative;
   width: 100%;
-  z-index: 9999;
+  z-index: 999;
   height: 65px;
   padding: 15px 90px;
   -webkit-transition: 0.5 ease;
@@ -2567,7 +2570,7 @@ input[type="file"] {
   margin-top: 5px;
   background-color: #ffffff;
   padding: 10px 5px;
-  z-index: 9999;
+  z-index: 99;
   border-radius: 5px;
   -webkit-box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
@@ -4033,7 +4036,7 @@ footer p {
     top: 65px;
     width: 100%;
     height: auto;
-    z-index: 9999;
+    z-index: 999;
   }
   .dashboard-sidebar.close {
     display: block;
@@ -4342,5 +4345,10 @@ footer p {
   cursor: pointer;
 }
 .nav-back:hover {
+  color: #ff6634;
+}
+.sorry {
+  text-align: center;
+  font-size: calc(18px + (36 - 18) * ((100vw - 300px) / 1300));
   color: #ff6634;
 }
