--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1227,6 +1227,7 @@ img {
 .blab-message {
   padding-left: 15px;
   width: 100%;
+  position: relative;
 }
 .blab-message textarea {
   width: 100%;
@@ -4374,4 +4375,9 @@ footer p {
   float: left;
   color: #232323;
   font-family: "Montserrat-SemiBold";
+}
+.blab-message-count {
+  position: absolute;
+  right: 0;
+  margin-top: -15px;
 }
