--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1230,6 +1230,52 @@ img {
   width: 100%;
   position: relative;
 }
+.blab-message-input {
+  position: relative;
+}
+.hashTagResults,
+.mentionResults {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  padding: 5px;
+  width: 100%;
+  margin-top: -10px;
+  z-index: 99;
+  border: 1px solid #e9e9e9;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.04);
+}
+.hashTagResults li,
+.mentionResults li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+  font-size: 13px;
+  cursor: pointer;
+}
+.hashTagResults li p {
+  color: #2e3b46;
+}
+.mentionResults li {
+  justify-content: start;
+}
+.mentionedBrandLogo {
+  height: 30px;
+  width: 30px;
+  margin-right: 5px;
+}
+.mentionedBrandLogo img {
+  border-radius: 50%;
+}
+.mentionedBrandName {
+  font-size: 14px;
+  font-family: "Montserrat-Bold";
+  color: #303030;
+  margin: 0;
+}
 .blab-message textarea {
   width: 100%;
   background-color: #fafafa;
@@ -1641,7 +1687,7 @@ input[type="file"] {
 }
 @media screen and (max-width: 991px) {
   .page-content {
-    padding: 15px;
+    padding: 45px 15px;
   }
   .post-blab {
     padding: 15px;
@@ -3414,8 +3460,13 @@ footer p {
 }
 
 .sidebar-icons {
-  width: 100vw;
+  top: 65px;
   background-color: #ffffff;
+  -webkit-box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+  position: fixed;
+  z-index: 999;
+  width: 100vw;
   padding: 10px 20px;
   font-size: 18px;
   display: flex;
