--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1243,6 +1243,8 @@ img {
   margin-top: -10px;
   z-index: 99;
   border: 1px solid #e9e9e9;
+  max-height: 230px;
+  overflow-y: auto;
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.04);
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.04);
