--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1080,7 +1080,7 @@ img {
   display: block !important;
 }
 .page-content {
-  padding: 60px 90px;
+  padding: 60px 90px 15px;
 }
 .timeline-left-sidebar,
 .timeline-left-sidebar2 {
@@ -1283,6 +1283,11 @@ img {
   color: #303030;
   margin: 0;
 }
+.hashTagResults .fa-spinner,
+.mentionResults .fa-spinner {
+  margin: 0 auto;
+  color: #ff6634;
+}
 .blab-message textarea {
   width: 100%;
   background-color: #fafafa;
@@ -1290,6 +1295,8 @@ img {
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 10px;
+  min-height: 100px;
+  max-height: 100px;
 }
 .blab-message textarea::placeholder,
 .comment-msg textarea::placeholder {
@@ -1321,6 +1328,7 @@ img {
 .blabs,
 .handles {
   margin: 40px 0 30px;
+  width: 100%;
 }
 .blab-content,
 .handle {
@@ -1427,6 +1435,7 @@ img {
   position: absolute;
   right: 20px;
   bottom: -40px;
+  z-index: 99;
   background-color: #ffffff;
   padding: 5px 10px;
   -webkit-box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.04);
@@ -1484,8 +1493,9 @@ img {
 }
 .comment-count {
   position: absolute;
-  bottom: 0;
-  right: 0;
+  color: #000000;
+  bottom: 15px;
+  right: 7px;
   font-size: 12px;
 }
 .comment-img {
@@ -1500,8 +1510,10 @@ img {
   color: #797979;
   border: none;
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px 10px 20px;
   margin-bottom: 10px;
+  min-height: 60px;
+  max-height: 60px;
 }
 .comment-msg {
   width: calc(100% - 80px);
@@ -4489,4 +4501,5 @@ footer p {
   text-align: center;
   font-size: 24px;
   color: #ff6634;
+  padding: 10px 0 20px;
 }
