--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1497,9 +1497,16 @@ img {
 .comment-count {
   position: absolute;
   color: #000000;
-  bottom: 15px;
+  bottom: 28px;
   right: 7px;
   font-size: 12px;
+}
+.comment-btn {
+  background-color: #ff6634;
+  padding: 5px 15px;
+  color: #ffffff;
+  border-radius: 5px;
+  margin: -25px 0 10px;
 }
 .comment-img {
   width: 40px;
@@ -1514,7 +1521,7 @@ img {
   border: none;
   border-radius: 5px;
   padding: 10px 10px 20px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
   min-height: 60px;
   max-height: 60px;
 }
