--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,6 +335,7 @@ img {
 }
 .signup-caption {
   height: 100%;
+  width: 50vw;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -511,6 +512,7 @@ img {
     padding: 20px 15px;
   }
   .signup-caption {
+    width: 100%;
     text-align: center;
     margin-bottom: 55px;
   }
@@ -1908,6 +1910,7 @@ input[type="file"] {
   padding: 10px;
   text-align: center;
   position: relative;
+  z-index: 9999;
 }
 .blab-alert button,
 .dash-blab-alert button {
@@ -2595,7 +2598,7 @@ input[type="file"] {
 .nav-header {
   position: relative;
   width: 100%;
-  z-index: 999;
+  z-index: 9999;
   height: 65px;
   padding: 15px 90px;
   -webkit-transition: 0.5 ease;
