--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1512,6 +1512,9 @@ img {
   height: 40px;
   margin: 0 20px;
 }
+.comment-img img {
+  border-radius: 50%;
+}
 .comment-msg {
   background-color: #fafafa;
   width: 100%;
